* Add position and length on list view
* Reset record to its original state when discarding the popup window
* Add support of expand attribute on group tag
* Add the context model name in the screen context
* Add sum of records on list view
* Add shortcuts to Date and DateTime widgets
* Use limit to expand tree
* Use spellcheck and lang attributes for textbox widget
* Support icon on page
* Add keyword attribute to button tag
* Support field name on image tag
* Use input number and toLocaleString for numeric fields
* Show related record names for all windows
* Allow to edit Many2One from tree view
* Use translated values when exporting Reference and Selection fields

Version 4.6.0 - 2017-10-30
* Bug fixes (see mercurial logs for details)
* Allow to export model and record name of Reference fields
* Re-position buttons on Binary/Image widget
* Set focus on first visible input when modal is shown
* Improve treeview headers
* Add keyboard shortcuts
* Update states of both toolbar and menu
* Improve toolbar order
* Use login details in title

Version 4.4.0 - 2017-05-01
* Bug fixes (see mercurial logs for details)
* Manage help attribute on tree views
* Manage color attribute on graph view
* Add support for size on Many2Many
* Allow to show plain text in password field

Version 4.2.0 - 2016-11-28
* Bug fixes (see mercurial logs for details)
* Add PYSON Widget
* Add CSV Import/Export
* Manage translated field
* Add favorites menu
* Show records names in wizard title
* Add support for datetime_field to Many2One, Reference
* Add calendar view
* Move info-bar to the top
* Add noeval to PYSONDecoder
* Add support for pyson_order on action window
* Make datetimepicker locale aware
* Restore tab default order when no manual change
* Add support for column sorting
* Manage confirm attribute on buttons
* Call autocompletion when setting record value
* Limit readonly state for xxx2Many
* Simplify login with single database
* Show records names in relate window title